--- a/style_item.css
+++ b/style_item.css
@@ -16,7 +16,7 @@ body {
 }
 
 .header {
-    background-image: url("../img/back.png");
+    background-image: url("/jamal/img/back.png");
     width: 100%;
     
     background-repeat: round;
@@ -52,7 +52,7 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    
     background-color: #b30000;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -277,7 +277,7 @@ body {
 }
 .carousel img{
     height:50vh;
-    width:auto;
+    width:30%; /*auto */
 }
 .boot .carousel-item.active{
     display:flex;
@@ -320,7 +320,7 @@ nav ul li {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow:hidden;
     background-color: #b30000;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -338,3 +338,75 @@ nav ul li {
 .register_form div input {
     width: 100%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/**************************
+START AUTOCOMPLETE CSS
+***************************
+
+
+* { box-sizing: border-box; }
+body {
+  font: 16px Arial; 
+}*/
+.autocomplete {
+  /*the container must be positioned relative:*/
+  position: relative;
+  display: inline-block;
+}
+input {
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  /*padding: 10px;
+  font-size: 16px;*/
+}
+input[type=text] {
+  background-color: #f1f1f1;
+  width: 100%;
+}
+input[type=submit] {
+  background-color: DodgerBlue;
+  color: #fff;
+}
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff; 
+  border-bottom: 1px solid #d4d4d4; 
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9; 
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important; 
+  color: #ffffff; 
+}
+
+
+/**************************
+END AUTOCOMPLETE CSS
+***************************/
